--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,25 @@
 /* #region Reset and Base */
 
 :root {
-  --dark-cl: #2e2f42;
-  --text-cl: #434455;
-  --white: #ffffff;
-  --accent-cl: #4d5ae5;
-  --accent-cl-active: #404bbf;
-  --light-cl: #f4f4fd;
-  --light-blue-cl: #e7e9fc;
+  scroll-behavior: smooth;
+
+  --dark-cl: 46 47 66;
+  --text-cl: 67 68 85;
+  --white: 255 255 255;
+  --accent-cl: 77 90 229;
+  --accent-cl-active: 64 75 191;
+  --light-cl: 244 244 253;
+  --light-blue-cl: 231 233 252;
+  --light-slate-cl: 142 143 153;
+  --light-green-cl: 49 208 170;
+
+  --trns-fast: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: var(--white);
-  color: var(--text-cl);
+  background-color: rgba(var(--white));
+  color: rgba(var(--text-cl));
 }
 
 h1,
@@ -64,7 +70,7 @@ img {
 }
 
 .logo {
-  color: var(--accent-cl);
+  color: rgba(var(--accent-cl));
   font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
   text-decoration: none;
@@ -75,7 +81,7 @@ img {
 }
 
 .heading {
-  color: var(--dark-cl);
+  color: rgba(var(--dark-cl));
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
@@ -86,12 +92,35 @@ img {
   padding-bottom: 120px;
 }
 
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(var(--accent-cl));
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color var(--trns-fast);
+}
+
+.social-icon {
+  fill: rgba(var(--light-cl));
+}
+
+.social-link:hover {
+  background-color: rgba(var(--light-green-cl));
+}
+
 /* #endregion */
 
 /* #region Header */
 .header {
-  background-color: var(--white);
-  border-bottom: 1px solid var(--light-blue-cl);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: rgba(var(--white));
+  border-bottom: 1px solid rgba(var(--light-blue-cl));
 }
 
 .header .container {
@@ -107,15 +136,16 @@ img {
 
 .nav-logo {
   margin-right: 76px;
+  transition: color var(--trns-fast);
 }
 
 .nav-logo > span {
-  color: var(--dark-cl);
+  color: rgba(var(--dark-cl));
 }
 
 .nav-logo:hover,
 .nav-logo:active {
-  color: var(--accent-cl-active);
+  color: rgba(var(--accent-cl-active));
 }
 
 .nav-menu {
@@ -127,20 +157,33 @@ img {
 }
 
 .nav-link {
+  position: relative;
   display: inline-block;
   padding-top: 24px;
   padding-bottom: 24px;
-  color: var(--dark-cl);
+  color: rgba(var(--dark-cl));
   text-decoration: none;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition: color var(--trns-fast);
+}
+
+.nav-link:active::after {
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: rgba(var(--accent-cl-active));
+  border-radius: 2px;
 }
 
 .nav-link:hover,
 .nav-link:active,
 .nav-link:focus {
-  color: var(--accent-cl-active);
+  color: rgba(var(--accent-cl-active));
 }
 
 .contacts {
@@ -156,16 +199,17 @@ img {
 }
 
 .contact-link {
-  color: var(--text-cl);
+  color: rgba(var(--text-cl));
   text-decoration: none;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition: color var(--trns-fast);
 }
 
-.contact:hover,
-.contact:active,
-.contact:focus {
-  color: var(--accent-cl-active);
+.contact-link:hover,
+.contact-link:active,
+.contact-link:focus {
+  color: rgba(var(--accent-cl-active));
 }
 
 /* #endregion */
@@ -173,10 +217,15 @@ img {
 /* #region Hero */
 
 .hero {
+  max-width: 1440px;
+  margin: 0 auto;
   padding-top: 188px;
   padding-bottom: 188px;
-  background-color: var(--dark-cl);
-  color: var(--white);
+  background-image: url(../images/hero-background.jpg);
+  background-image: linear-gradient(rgba(var(--dark-cl) / 70%), rgba(var(--dark-cl) / 70%)),
+    url(../images/hero-background.jpg);
+  background-size: cover;
+  color: rgba(var(--white));
 }
 
 .hero .container {
@@ -197,8 +246,8 @@ img {
 .order-btn {
   min-width: 169px;
   padding: 16px 32px;
-  background-color: var(--accent-cl);
-  color: var(--white);
+  background-color: rgba(var(--accent-cl));
+  color: rgba(var(--white));
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -208,12 +257,13 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   outline: none;
   cursor: pointer;
+  transition: background-color var(--trns-fast);
 }
 
 .order-btn:hover,
 .order-btn:active,
 .order-btn:focus {
-  background-color: var(--accent-cl-active);
+  background-color: rgba(var(--accent-cl-active));
 }
 
 /* #endregion */
@@ -225,13 +275,27 @@ img {
   justify-content: space-between;
 }
 
+.about-item {
+  flex-basis: calc((100% - 72px) / 4);
+}
+
 .about-item:not(:last-child) {
   margin-right: 24px;
 }
 
+.about-icon-box {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 8px;
+  padding: 24px 0;
+  border-radius: 4px;
+  border: 1px solid rgba(var(--light-slate-cl));
+  background: rgba(var(--light-cl));
+}
+
 .about-title {
   margin-bottom: 8px;
-  color: var(--dark-cl);
+  color: rgba(var(--dark-cl));
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
@@ -249,7 +313,7 @@ img {
 /* #region Team */
 
 .team {
-  background-color: var(--light-cl);
+  background-color: rgba(var(--light-cl));
 }
 
 .team-heading {
@@ -266,11 +330,10 @@ img {
 
 .team-card {
   width: 264px;
-  height: 380px;
-  background-color: var(--white);
+  background-color: rgba(var(--white));
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  box-shadow: 0px 1px 1px color-mix(in srgb, var(--dark-cl) 16%, transparent);
+  box-shadow: 0px 1px 1px rgba(var(--dark-cl) / 16%);
 }
 
 .team-card-content {
@@ -279,7 +342,7 @@ img {
 
 .team-card-title {
   margin-bottom: 8px;
-  color: var(--dark-cl);
+  color: rgba(var(--dark-cl));
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
@@ -288,10 +351,17 @@ img {
 }
 
 .team-card-descr {
+  padding-bottom: 8px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+}
+
+.team-socials {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 16px;
 }
 
 /* #endregion */
@@ -310,15 +380,49 @@ img {
   gap: 48px 24px;
 }
 
+.portfolio-card {
+  transition: box-shadow var(--trns-fast);
+}
+
+.portfolio-card:hover .overlay {
+  transform: translateY(0);
+}
+
+.portfolio-thumb {
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 40px 32px;
+  width: 100%;
+  height: 100%;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: rgba(var(--light-cl));
+  background-color: rgba(var(--accent-cl));
+  transform: translateY(101%);
+  transition: transform var(--trns-fast);
+}
+
+.portfolio-card:hover {
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+}
+
 .portfolio-card-content {
   padding: 32px 16px;
-  border: 1px solid var(--light-blue-cl);
+  border: 1px solid rgba(var(--light-blue-cl));
   border-top: none;
 }
 
 .portfolio-card-title {
   margin-bottom: 8px;
-  color: var(--dark-cl);
+  color: rgba(var(--dark-cl));
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
@@ -338,7 +442,12 @@ img {
 .footer {
   padding-top: 100px;
   padding-bottom: 100px;
-  background-color: var(--dark-cl);
+  background-color: rgba(var(--dark-cl));
+}
+
+.footer .container {
+  display: flex;
+  align-items: baseline;
 }
 
 .footer-logo {
@@ -347,15 +456,37 @@ img {
 }
 
 .footer-logo > span {
-  color: var(--light-cl);
+  color: rgba(var(--light-cl));
 }
 
 .footer-text {
   width: 264px;
-  color: var(--light-cl);
+  margin-right: 120px;
+  color: rgba(var(--light-cl));
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+
+.footer-socials {
+  width: 208px;
+}
+
+.footer-social-title {
+  margin-bottom: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: rgba(var(--white));
+}
+
+.footer-socials-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-social-icon {
+  fill: rgba(var(--light-cl));
 }
 
 /* #endregion */
