--- a/css/styles.css
+++ b/css/styles.css
@@ -92,12 +92,17 @@ img {
   padding-bottom: 120px;
 }
 
+.social-item {
+  width: 40px;
+  height: 40px;
+}
+
 .social-link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
   background-color: rgba(var(--accent-cl));
   border-radius: 50%;
   cursor: pointer;
@@ -109,7 +114,7 @@ img {
 }
 
 .social-link:hover {
-  background-color: rgba(var(--light-green-cl));
+  background-color: rgba(var(--accent-cl-active));
 }
 
 /* #endregion */
@@ -121,6 +126,8 @@ img {
   z-index: 1000;
   background-color: rgba(var(--white));
   border-bottom: 1px solid rgba(var(--light-blue-cl));
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header .container {
@@ -169,7 +176,7 @@ img {
   transition: color var(--trns-fast);
 }
 
-.nav-link:active::after {
+.nav-link::after {
   content: '';
   position: absolute;
   bottom: -1px;
@@ -224,6 +231,8 @@ img {
   background-image: url(../images/hero-background.jpg);
   background-image: linear-gradient(rgba(var(--dark-cl) / 70%), rgba(var(--dark-cl) / 70%)),
     url(../images/hero-background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
   color: rgba(var(--white));
 }
@@ -286,6 +295,8 @@ img {
 .about-icon-box {
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 112px;
   margin-bottom: 8px;
   padding: 24px 0;
   border-radius: 4px;
@@ -330,10 +341,11 @@ img {
 
 .team-card {
   width: 264px;
-  background-color: rgba(var(--white));
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  box-shadow: 0px 1px 1px rgba(var(--dark-cl) / 16%);
+  background-color: rgba(var(--white));
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .team-card-content {
@@ -360,7 +372,8 @@ img {
 
 .team-socials {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 24px;
   margin: 0 16px;
 }
 
@@ -405,7 +418,7 @@ img {
   letter-spacing: 0.02em;
   color: rgba(var(--light-cl));
   background-color: rgba(var(--accent-cl));
-  transform: translateY(101%);
+  transform: translateY(100%);
   transition: transform var(--trns-fast);
 }
 
@@ -450,6 +463,10 @@ img {
   align-items: baseline;
 }
 
+.footer-promo {
+  margin-right: 120px;
+}
+
 .footer-logo {
   display: inline-block;
   margin-bottom: 16px;
@@ -461,7 +478,6 @@ img {
 
 .footer-text {
   width: 264px;
-  margin-right: 120px;
   color: rgba(var(--light-cl));
   font-size: 16px;
   line-height: 1.5;
@@ -485,8 +501,8 @@ img {
   gap: 16px;
 }
 
-.footer-social-icon {
-  fill: rgba(var(--light-cl));
+.footer-social-link:hover {
+  background-color: rgba(var(--light-green-cl));
 }
 
 /* #endregion */
