--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,8 @@ img {
   fill: rgba(var(--light-cl));
 }
 
-.social-link:hover {
+.social-link:hover,
+.social-link:focus {
   background-color: rgba(var(--accent-cl-active));
 }
 
@@ -163,8 +164,26 @@ img {
   margin-right: 40px;
 }
 
-.nav-link {
+.nav-item {
   position: relative;
+}
+
+.nav-item:first-child .nav-link {
+  color: rgba(var(--accent-cl-active));
+}
+
+.nav-item:first-child::after {
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: rgba(var(--accent-cl-active));
+  border-radius: 2px;
+}
+
+.nav-link {
   display: inline-block;
   padding-top: 24px;
   padding-bottom: 24px;
@@ -174,17 +193,6 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   transition: color var(--trns-fast);
-}
-
-.nav-link::after {
-  content: '';
-  position: absolute;
-  bottom: -1px;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: rgba(var(--accent-cl-active));
-  border-radius: 2px;
 }
 
 .nav-link:hover,
@@ -501,7 +509,8 @@ img {
   gap: 16px;
 }
 
-.footer-social-link:hover {
+.footer-social-link:hover,
+.footer-social-link:focus {
   background-color: rgba(var(--light-green-cl));
 }
 
