--- a/css/styles.css
+++ b/css/styles.css
@@ -164,26 +164,8 @@ img {
   margin-right: 40px;
 }
 
-.nav-item {
-  position: relative;
-}
-
-.nav-item:first-child .nav-link {
-  color: rgba(var(--accent-cl-active));
-}
-
-.nav-item:first-child::after {
-  content: '';
-  position: absolute;
-  bottom: -1px;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: rgba(var(--accent-cl-active));
-  border-radius: 2px;
-}
-
 .nav-link {
+  position: relative;
   display: inline-block;
   padding-top: 24px;
   padding-bottom: 24px;
@@ -193,6 +175,21 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   transition: color var(--trns-fast);
+}
+
+.nav-link:first-child {
+  color: rgba(var(--accent-cl-active));
+}
+
+.nav-link::after {
+  content: '';
+  position: absolute;
+  bottom: -1px;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: rgba(var(--accent-cl-active));
+  border-radius: 2px;
 }
 
 .nav-link:hover,
